--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -13,7 +13,7 @@ $color-gray-border: lighten($color-base, 77%);
 $color-gray-bg: lighten($color-base, 79%);
 
 // Typographic
-$typographic-font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$typographic-font-family: 'Open Sans', sans-serif;
 
 $typographic-root-font-size: 100;
 $typographic-base-font-size: 16px;
@@ -28,7 +28,7 @@ $typographic-link-s-font-color: $color-secondary;
 $typographic-leading: round(16 * ($typographic-root-font-size / 100) * $typographic-base-line-height);
 
 // Layout
-$layout-post-single-max-width: 945px;
+$layout-post-single-max-width: 1150px;
 $layout-post-single-width: $layout-post-single-max-width - 305px;
 
 $layout-width: 1070px;
