--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -2,6 +2,8 @@
  * Generic
  */
 
+@import "../scss/variables";
+
 html {
     font-size: $typographic-root-font-size;
 }
@@ -81,18 +83,20 @@ hr {
     margin-top: 52px;
     margin-bottom: 52px;
     border: 0;
-    color: $color-base;
+    color: #f1f1f1;
     display: block;
-    height: 26px;
+    height: 25px;
     margin-right: auto;
     margin-left: auto;
     background-size: 100% 26px;
-    background-image: linear-gradient(to bottom, transparent 1px, transparent 11px, $color-base 11px, $color-base 15px, transparent 15px, transparent 26px);
-    width: 100px;
+    background-image: linear-gradient(to bottom, transparent 1px, transparent 11px, #e4e4e4 11px, #e4e4e4 15px, transparent 15px, transparent 26px);
+    // width: 1150px;
+    // width: $layout-post-single-max-width;
 }
 
 a {
     color: $typographic-link-p-font-color;
+    font-weight: 600;
     text-decoration: none;
     &:hover,
     &:focus,
@@ -103,7 +107,7 @@ a {
 
 b,
 strong {
-    font-weight: 500;
+    font-weight: 800;
 }
 
 ul {
