--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -29,7 +29,7 @@ h6 {
 }
 
 h1 {
-  font-size: $typographic-base-font-size * 2.5;
+  font-size: $typographic-base-font-size * 2.3;
   @include line-height(2);
   @include margin-top(4);
   @include margin-bottom(1);
@@ -125,9 +125,10 @@ p {
 }
 
 blockquote {
-  padding: 0;
+  padding: 0 1rem;
   font-style: italic;
   text-align: center;
+  border-left: 3px solid #D3D3D3;
 }
 
 figure {
