--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -7,15 +7,22 @@
   margin: 0 auto;
 
   &__title {
-    font-size: $typographic-base-font-size * 2;
+    font-size: $typographic-base-font-size * 2.3;
     max-width: $layout-post-width;
-    margin-left: auto;
-    margin-right: auto;
     font-weight: 600;
-    text-align: center;
+    // text-align: center;
+    margin: 0 auto;
     @include line-height(1.65);
     @include margin-top(1);
     @include margin-bottom(0)
+
+    &:after {
+      content: "";
+      display: block;
+      background-color: #e1e1e1;
+      height: 0.2rem;
+      @include margin-top(1);
+    }
   }
 
   &__body {
@@ -63,7 +70,7 @@
     padding: 0;
 
     &__title {
-      font-size: $typographic-base-font-size * 3;
+      font-size: $typographic-base-font-size * 2.5;
       @include line-height(2.25);
       @include margin-top(2.25);
       @include margin-bottom(1.5)
