--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -126,9 +126,8 @@ p {
 
 blockquote {
   padding: 0 1rem;
-  font-style: italic;
-  text-align: center;
   border-left: 3px solid #D3D3D3;
+  color: #787878;
 }
 
 figure {
